--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -3,8 +3,8 @@ import { Building, LayoutDashboard, PencilLine, Search, Shield, ShoppingCart } f
 ---
 
 <section id="servicios" class="py-20 bg-gradient-to-tr from-black-950 to-labs from-10% relative">
-<div class="absolute top-1/3 left-1/3 size-80 bg-radial from-labs blur-3xl rounded-full"></div>
-    <div class="max-w-6xl mx-auto px-6 text-center">
+<div class="absolute top-1/3 left-1/3 size-80 bg-radial from-labs blur-2xl rounded-full"></div>
+    <div class="container-labs text-center">
       <h2 class="title-secundary title-style">Nuestros Servicios</h2>
       <p class="text-lg mb-12 text-gray-400">
         Creamos páginas web modernas y funcionales adaptadas a las necesidades de tu negocio.
@@ -15,7 +15,7 @@ import { Building, LayoutDashboard, PencilLine, Search, Shield, ShoppingCart } f
           <div class="card-icon service-card-icon">
             <LayoutDashboard class="icon-size"/>
           </div>
-          <h3 class="text-xl font-semibold mb-2">Landing Pages</h3>
+          <h3 class="title-card">Landing Pages</h3>
           <p class="text-gray-400">Diseñadas para captar clientes y aumentar tus conversiones.</p>
         </div>
   
@@ -23,7 +23,7 @@ import { Building, LayoutDashboard, PencilLine, Search, Shield, ShoppingCart } f
           <div class="card-icon service-card-icon">
             <Building class="icon-size"/>
           </div>
-          <h3 class="text-xl font-semibold mb-2">Páginas Corporativas</h3>
+          <h3 class="title-card">Páginas Corporativas</h3>
           <p class="text-gray-400">Transmití la esencia de tu empresa con un sitio profesional.</p>
         </div>
   
@@ -31,7 +31,7 @@ import { Building, LayoutDashboard, PencilLine, Search, Shield, ShoppingCart } f
           <div class="card-icon service-card-icon">
             <ShoppingCart class="icon-size"/>
           </div>
-          <h3 class="text-xl font-semibold mb-2">E-commerce</h3>
+          <h3 class="title-card">E-commerce</h3>
           <p class="text-gray-400">Tiendas online con pasarelas de pago seguras y gestión sencilla.</p>
         </div>
   
@@ -39,7 +39,7 @@ import { Building, LayoutDashboard, PencilLine, Search, Shield, ShoppingCart } f
           <div class="card-icon service-card-icon">
             <PencilLine class="icon-size"/>
           </div>
-          <h3 class="text-xl font-semibold mb-2">Blogs Personalizados</h3>
+          <h3 class="title-card">Blogs Personalizados</h3>
           <p class="text-gray-400">Espacios ideales para compartir contenido y atraer lectores.</p>
         </div>
 
@@ -47,7 +47,7 @@ import { Building, LayoutDashboard, PencilLine, Search, Shield, ShoppingCart } f
           <div class="card-icon service-card-icon">
             <Shield class="icon-size"/>
           </div>
-          <h3 class="text-xl font-semibold mb-2">Mantenimiento</h3>
+          <h3 class="title-card">Mantenimiento</h3>
           <p class="text-gray-400">Actualizaciones, seguridad y soporte técnico continuo.</p>
         </div>
 
@@ -55,7 +55,7 @@ import { Building, LayoutDashboard, PencilLine, Search, Shield, ShoppingCart } f
           <div class="card-icon service-card-icon">
             <Search class="icon-size"/>
           </div>
-          <h3 class="text-xl font-semibold mb-2">SEO & Velocidad</h3>
+          <h3 class="title-card">SEO & Velocidad</h3>
           <p class="text-gray-400">Optimización para Google y carga ultrarrápida.</p>
         </div>
       </div>
