--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { Menu, Play } from "@lucide/astro";
+import { Menu, Phone } from "@lucide/astro";
 ---
 
 <header class="container-labs flex items-center justify-between gap-2 sticky top-2 z-20 px-4 py-2 bg-black/50 rounded-lg backdrop-blur-lg shadow-md shadow-gray-800/40">
@@ -20,7 +20,7 @@ import { Menu, Play } from "@lucide/astro";
         </div>
         <div>
             <a href="#" class="p-2 bg-gradient-to-bl from-primary-500 to-primary-600 rounded-full flex items-center justify-center hover:from-black-950 hover:to-transparent hover:outline hover:outline-primary-500 transition-colors duration-pro">
-                <Play class="size-4" />
+                <Phone class="size-4" />
             </a>
         </div>
     </nav>
