add: project section

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,6 +1,6 @@
 <section
     id="contacto"
-    class="py-20 bg-gradient-to-br from-[#18183a] to-[#49537e] text-white"
+    class="py-20 bg-gradient-to-b from-labs to-black-950 from-10%"
 >
     <div class="max-w-6xl mx-auto px-6">
         <div class="text-center mb-12">
