--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -19,7 +19,7 @@ import { Menu, Phone } from "@lucide/astro";
             <a href="#" class="link-btn">Contacto</a>
         </div>
         <div>
-            <a href="#" class="p-2 bg-gradient-to-bl from-primary-500 to-primary-600 rounded-full flex items-center justify-center hover:from-black-950 hover:to-transparent hover:outline hover:outline-primary-500 transition-colors duration-pro">
+            <a href="#" class="btn-link">
                 <Phone class="size-4" />
             </a>
         </div>
