--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -3,7 +3,7 @@ import { Building, LayoutDashboard, PencilLine, Search, Shield, ShoppingCart } f
 ---
 
 <section id="servicios" class="py-20 bg-gradient-to-tr from-black-950 to-labs from-10% relative">
-<div class="absolute top-1/3 left-1/3 size-80 bg-radial from-labs blur-2xl rounded-full"></div>
+<div class="rocket-bg top-1/3 left-1/3"></div>
     <div class="container-labs text-center">
       <h2 class="title-secundary title-style">Nuestros Servicios</h2>
       <p class="text-lg mb-12 text-gray-400">
