--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="bg-[#18183a] text-gray-300 py-10">
+<footer class="bg-labs py-10">
     <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-10">
         <!-- Logo / Descripción -->
         <div>
