--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Process from '../components/Process.astro';
 import Pricing from '../components/Pricing.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/ui/Footer.astro';
+import Portfolio from '../components/Portfolio.astro';
 ---
 
 <Layout title="CetZz Labs | Una empresa de tecnología diferente">
@@ -16,7 +17,8 @@ import Footer from '../components/ui/Footer.astro';
 	<About />
 	<Service />
 	<Process />
-	<Pricing />
+	<!-- <Pricing /> -->
+	<Portfolio />
 	<Contact />
 	<Footer />
 </Layout>
