add: contact section

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -15,8 +15,8 @@ import Header from "./ui/Header.astro";
             <p>Desarrollamos soluciones web innovadoras y tecnológicas para impulsar tu negocio.</p>
         </div>
         <div class="space-x-4">
-            <a href="" class="btn-secundary">Conocer más</a>
-            <a href="" class="btn-primary">Solicitar Web</a>
+            <a href="#quienes-somos" class="btn-secundary">Conocer más</a>
+            <a href="#contacto" class="btn-primary">Solicitar Web</a>
         </div>
     </section>
 </main>
