--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -57,7 +57,7 @@ const projects: Project[] = [
                                 <img
                                     src={project.image}
                                     alt={project.title}
-                                    class="size-full rounded-2xl max-h-[720px] min-h-[720px] object-cover hover:scale-110 hover:rotate-2 transition-transform duration-pro mask-radial-[100%_95%] mask-radial-from-70% mask-radial-at-top"
+                                    class="size-full rounded-2xl max-h-[500px] min-h-[500px] lg:max-h-[720px] lg:min-h-[720px] object-contain lg:object-cover hover:scale-110 hover:rotate-2 transition-transform duration-pro mask-radial-[100%_95%] mask-radial-from-70% mask-radial-at-top"
                                 />
                                 <div class="absolute bottom-0 py-4 px-8 w-full text-left">
                                     <h3 class="text-xl font-semibold mb-2">
