--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -12,14 +12,14 @@ import { Menu, Phone } from "@lucide/astro";
     </button>
     <nav class="grow hidden lg:flex px-2" id="mobile-menu" aria-hidden="true">
         <div class="grow flex items-center justify-center gap-4 text-gray-300 font-semibold">
-            <a href="#" class="link-btn">Nosotros</a>
-            <a href="#" class="link-btn">Servicios</a>
-            <a href="#" class="link-btn">Portafolio</a>
-            <a href="#" class="link-btn">Precios</a>
-            <a href="#" class="link-btn">Contacto</a>
+            <a href="#quienes-somos" class="link-btn">Nosotros</a>
+            <a href="#servicios" class="link-btn">Servicios</a>
+            <a href="#proceso" class="link-btn">Proceso</a>
+            <a href="#portafolio" class="link-btn">Portafolio</a>
+            <a href="#contacto" class="link-btn">Contacto</a>
         </div>
         <div>
-            <a href="#" class="btn-link">
+            <a href="#contacto" class="btn-link">
                 <Phone class="size-4" />
             </a>
         </div>
