--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,4 +1,4 @@
-<section id="quienes-somos" class="py-20 bg-gradient-to-br from-black-950 to-labs from-10%">
+<section id="quienes-somos" class="pb-20 pt-2 bg-gradient-to-br from-black-950 to-labs from-10%">
     <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
         <!-- Imagen / Ilustración -->
         <div data-aos="fade-right">
@@ -27,15 +27,15 @@
             </p>
             <div class="flex items-center gap-6">
                 <div class="text-center">
-                    <p class="text-3xl font-bold text-azul">+50</p>
+                    <p class="text-3xl font-bold text-accent-400">+50</p>
                     <span class="text-gray-500 text-sm">Proyectos</span>
                 </div>
                 <div class="text-center">
-                    <p class="text-3xl font-bold text-azul">+30</p>
+                    <p class="text-3xl font-bold text-accent-400">+30</p>
                     <span class="text-gray-500 text-sm">Clientes felices</span>
                 </div>
                 <div class="text-center">
-                    <p class="text-3xl font-bold text-azul">5+</p>
+                    <p class="text-3xl font-bold text-accent-400">5+</p>
                     <span class="text-gray-500 text-sm"
                         >Años de experiencia</span
                     >
