fix: SEO from images

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -7,7 +7,7 @@ import {
     MessageCircleMore,
     Phone,
 } from "@lucide/astro";
-import X from "./svg/x.astro";
+import X from "./svg/X.astro";
 ---
 
 <section
@@ -95,7 +95,7 @@ import X from "./svg/x.astro";
                     name="email"
                     required
                     class="contact-input"
-                    placeholder="tucorreo@email.com"
+                    placeholder="tucorreo@gmail.com"
                 />
             </div>
 
@@ -114,7 +114,7 @@ import X from "./svg/x.astro";
 
             <button
                 type="submit"
-                class="btn-primary-big w-full mt-2"
+                class="btn-primary-big w-full mt-2 cursor-pointer"
             >
                 Enviar mensaje
             </button>
