--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -4,7 +4,7 @@ import Header from "./ui/Header.astro";
 
 ---
 
-<main>
+<main id="inicio">
     <div class="absolute top-0 left-0 w-screen h-screen -z-10 flex items-center justify-center lg:justify-end bg-gradient-to-tr from-black-950 to-labs from-10%">
         <video src="/hero-video.mp4" autoplay loop muted class="size-2xl object-cover mask-radial-at-center mask-radial-from-20% mask-radial-to-70% mb-96 lg:mb-0"></video>
     </div>
