--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,19 +1,26 @@
-<section id="quienes-somos" class="pb-20 pt-2 bg-gradient-to-br from-black-950 to-labs from-10%">
+---
+import Image from "astro/components/Image.astro";
+---
+
+<section
+    id="quienes-somos"
+    class="pb-20 pt-2 bg-gradient-to-br from-black-950 to-labs from-10%"
+>
     <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
         <!-- Imagen / Ilustración -->
         <div data-aos="fade-right">
-            <img
+            <Image
                 src="/team.webp"
                 alt="Nuestro equipo"
+                width={1280}
+                height={720}
                 class="shadow-xl object-cover w-full h-[400px] md:h-[500px] mask-radial-[100%_100%] mask-radial-from-10% mask-radial-at-left"
             />
         </div>
 
         <!-- Texto -->
         <div class="space-y-6" data-aos="fade-left">
-            <h2 class="title-secundary title-style">
-                Quiénes somos
-            </h2>
+            <h2 class="title-secundary title-style">Quiénes somos</h2>
             <p class="text-lg text-gray-400 leading-relaxed">
                 Somos un equipo apasionado por la tecnología y el diseño,
                 especializados en crear páginas web modernas, rápidas y
