--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,6 +1,5 @@
 <footer class="bg-labs py-10">
     <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-10">
-        <!-- Logo / Descripción -->
         <div>
             <h3 class="text-2xl font-bold text-white mb-4">CetZz Labs</h3>
             <p class="text-gray-400">
@@ -8,36 +7,34 @@
             </p>
         </div>
 
-        <!-- Enlaces -->
         <div>
             <h4 class="text-lg font-semibold text-white mb-4">
                 Enlaces rápidos
             </h4>
             <ul class="space-y-2">
                 <li>
-                    <a href="#inicio" class="hover:text-white transition"
-                        >Inicio</a
+                    <a href="#quienes-somos" class="link-btn"
+                        >Nosotros</a
                     >
                 </li>
                 <li>
-                    <a href="#servicios" class="hover:text-white transition"
+                    <a href="#servicios" class="link-btn"
                         >Servicios</a
                     >
                 </li>
                 <li>
-                    <a href="#precios" class="hover:text-white transition"
-                        >Planes y Precios</a
+                    <a href="#proceso" class="link-btn"
+                        >Proceso de desarrollo</a
                     >
                 </li>
                 <li>
-                    <a href="#contacto" class="hover:text-white transition"
+                    <a href="#contacto" class="link-btn"
                         >Contacto</a
                     >
                 </li>
             </ul>
         </div>
 
-        <!-- Redes sociales -->
         <div>
             <h4 class="text-lg font-semibold text-white mb-4">Síguenos</h4>
             <div class="flex space-x-4">
@@ -65,7 +62,6 @@
         </div>
     </div>
 
-    <!-- Línea final -->
     <div
         class="mt-10 border-t border-gray-700 pt-6 text-center text-gray-500 text-sm"
     >
