--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,10 +1,13 @@
+---
+import { socials } from "../../data/data";
+import Icons from "./Icons.astro";
+---
+
 <footer class="bg-labs py-10">
     <div class="max-w-6xl mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-10">
         <div>
             <h3 class="text-2xl font-bold text-white mb-4">CetZz Labs</h3>
-            <p class="text-gray-400">
-                Una empresa de tecnología diferente.
-            </p>
+            <p class="text-gray-400">Una empresa de tecnología diferente.</p>
         </div>
 
         <div>
@@ -13,24 +16,17 @@
             </h4>
             <ul class="space-y-2">
                 <li>
-                    <a href="#quienes-somos" class="link-btn"
-                        >Nosotros</a
+                    <a href="#quienes-somos" class="link-btn">Nosotros</a>
+                </li>
+                <li>
+                    <a href="#servicios" class="link-btn">Servicios</a>
+                </li>
+                <li>
+                    <a href="#proceso" class="link-btn">Proceso de desarrollo</a
                     >
                 </li>
                 <li>
-                    <a href="#servicios" class="link-btn"
-                        >Servicios</a
-                    >
-                </li>
-                <li>
-                    <a href="#proceso" class="link-btn"
-                        >Proceso de desarrollo</a
-                    >
-                </li>
-                <li>
-                    <a href="#contacto" class="link-btn"
-                        >Contacto</a
-                    >
+                    <a href="#contacto" class="link-btn">Contacto</a>
                 </li>
             </ul>
         </div>
@@ -38,26 +34,19 @@
         <div>
             <h4 class="text-lg font-semibold text-white mb-4">Síguenos</h4>
             <div class="flex space-x-4">
-                <a
-                    href="#"
-                    class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-azul-claro transition"
-                    >🌐</a
-                >
-                <a
-                    href="#"
-                    class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-azul-claro transition"
-                    >🐦</a
-                >
-                <a
-                    href="#"
-                    class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-azul-claro transition"
-                    >📘</a
-                >
-                <a
-                    href="#"
-                    class="w-10 h-10 flex items-center justify-center rounded-full bg-white/10 hover:bg-azul-claro transition"
-                    >📸</a
-                >
+                {
+                    socials.map((social) => (
+                        <a
+                            href={social.url}
+                            class="btn-link-secundary"
+                            target="_blank"
+                            title={social.name}
+                            aria-label={social.name}
+                        >
+                            <Icons name={social.name} />
+                        </a>
+                    ))
+                }
             </div>
         </div>
     </div>
