--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,7 +55,7 @@
 }
 
 .btn-link {
-    @apply p-2 bg-gradient-to-bl from-primary-500 to-primary-700 rounded-full flex items-center justify-center hover:from-black-950 hover:to-transparent hover:outline hover:outline-primary-500 transition-colors duration-pro;
+    @apply p-2 bg-gradient-to-bl from-primary-500 to-primary-700 rounded-full flex items-center justify-center hover:from-black-950 hover:to-transparent hover:outline hover:outline-primary-500 hover:shadow-lg hover:shadow-primary-600/40 transition-colors duration-pro;
 }
 
 .btn-link-secundary {
@@ -63,7 +63,7 @@
 }
 
 .btn-primary {
-    @apply px-6 py-2 bg-primary-600 rounded-md hover:bg-transparent hover:outline hover:outline-primary-600 transition-colors duration-pro;
+    @apply px-6 py-2 bg-primary-600 rounded-md hover:bg-transparent hover:outline hover:outline-primary-600 hover:shadow-lg hover:shadow-primary-600/40 transition-colors duration-pro;
 }
 
 .btn-primary-big {
