add: SEO of page

--- a/src/components/ui/Header.astro
+++ b/src/components/ui/Header.astro
@@ -20,7 +20,7 @@ import Image from "astro/components/Image.astro";
             <a href="#contacto" class="link-btn">Contacto</a>
         </div>
         <div>
-            <a href="#contacto" class="btn-link" title="Contactar">
+            <a href="#contacto" class="btn-link" title="Contactar" aria-label="Contactar">
                 <Phone class="size-4" />
             </a>
         </div>
