--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,14 @@ import "../styles/global.css";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{Astro.props.title}</title>
+		<meta
+			name="description"
+			content="Somos un equipo apasionado por la tecnología y el diseño, especializados en crear páginas web modernas, rápidas y funcionales que ayudan a las empresas a crecer en el mundo digital."
+		/>
+		<meta name="keywords" content="CetZz Labs, Desarrollo web, Diseño web, Páginas web, Aplicaciones web, Desarrollo de software, Desarrollo de aplicaciones, Desarrollo de software, Desarrollo de aplicaciones, Desarrollo de software, Desarrollo de aplicaciones" />
+		<meta name="author" content="CetZz Labs" />
+		<meta name="robots" content="index, follow" />
+		
 	</head>
 	<body class="bg-black-950 text-white overflow-x-hidden">
 		<slot />
