--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -21,23 +21,13 @@ const currentYear = new Date().getFullYear();
                 <h4 class="text-lg font-semibold text-neutral-200 mb-4">
                     Enlaces rápidos
                 </h4>
-                <ul class="space-y-3">
-                    <li>
-                        <a href="#quienes-somos" class="link-btn">Nosotros</a>
-                    </li>
-                    <li>
-                        <a href="#servicios" class="link-btn">Servicios</a>
-                    </li>
-                    <li>
-                        <a href="#proceso" class="link-btn">Proceso</a>
-                    </li>
-                    <li>
-                        <a href="#portafolio" class="link-btn">Portafolio</a>
-                    </li>
-                    <li>
-                        <a href="#contacto" class="link-btn">Contacto</a>
-                    </li>
-                </ul>
+                <div class="flex flex-col gap-2">
+                    <a href="#quienes-somos" class="link-btn">Nosotros</a>
+                    <a href="#servicios" class="link-btn">Servicios</a>
+                    <a href="#proceso" class="link-btn">Proceso</a>
+                    <a href="#portafolio" class="link-btn">Portafolio</a>
+                    <a href="#contacto" class="link-btn">Contacto</a>
+                </div>
             </div>
         </div>
 
