--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,5 +1,4 @@
 ---
-import Header from "./ui/Header.astro";
 import Typewriter from "./ui/Typewriter";
 ---
 
@@ -8,7 +7,7 @@ import Typewriter from "./ui/Typewriter";
         <video src="/hero-video.mp4" autoplay loop muted class="size-2xl object-cover mask-radial-at-center mask-radial-from-20% mask-radial-to-70% mb-96 lg:mb-0 hidden lg:flex"></video>
     </div>
     <section class="h-[calc(100vh-70px)] pb-60 flex flex-col items-center lg:items-start justify-end lg:justify-center gap-8 container-labs lg:pb-14">
-        <div class="text-center lg:text-left">
+        <div class="text-center lg:text-left space-y-4">
             <h1 class="lg:text-7xl text-5xl font-extrabold title-style">CetZz Labs</h1>
              <Typewriter client:load />
             <p>Desarrollamos soluciones web innovadoras y tecnológicas para impulsar tu negocio.</p>
